# fwmap

./: .gitignore  Cargo.toml  README.md  history.db
.github/workflows/: fwmap-main-history.yml  fwmap-pr.yml
apps/fwmap-desktop/: index.html  package-lock.json  package.json
apps/fwmap-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/fwmap-desktop/src-tauri/capabilities/: default.json
apps/fwmap-desktop/src-tauri/src/: commands.rs  dto.rs  lib.rs  main.rs  service.rs  storage.rs
docs/: manual.html  manual.md  toolchains.md
site/: fwmap.sarif  history-commits.html  history-range.html  index.html  regression-rom.html  report.html  report.json
src/: analyze.rs  cli.rs  demangle.rs  diff.rs  history.rs  ingest.rs  lib.rs  main.rs  model.rs  render.rs  rule_config.rs  rules.rs
src/cli/: mod.rs
src/core/: analyze.rs  cpp.rs  demangle.rs  diff.rs  git.rs  history.rs  linkage.rs  mod.rs  model.rs  policy.rs  rule_config.rs  rules.rs  rust_ingest.rs  rust_view.rs
src/debug/: mod.rs
src/ingest/: elf.rs  lds.rs  map.rs  mod.rs
src/report/: render.rs
src/sarif/: mod.rs
src/validation/: quality.rs
tests/: phase10_toolchain_integration.rs  phase11_dwarf_integration.rs  phase17_debug_artifact_integration.rs  phase18_sarif_integration.rs  phase19_explain_integration.rs  phase7_integration.rs  phase8_ci_integration.rs
tests/corpus/: README.md
tests/fixtures/: README.md  archive_colon.map  archive_pull.map  broken.map  cross_reference.map  decimal_sizes.map  discarded_sections.map  include_main.ld  include_memory.ld  lld_cpp.map  lld_internal.map  (+15 more)
(+43 files in other folders)
